// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input demo -- input 1`] = `
.c12 {
  vertical-align: baseline;
}

.c25 {
  display: table;
  width: 100%;
}

.c24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c24 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c24:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c24 input {
  line-height: 26px;
  height: 26px;
}

.c24 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c24 input::-moz-placeholder {
  color: #abb4c3;
}

.c24 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c24 input::placeholder {
  color: #abb4c3;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c27 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c27:last-child {
  margin-right: 0;
}

.c7 .c28+.c28 {
  margin-left: -1px;
}

.c7 .c26 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c26:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c26:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        prefix
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        suffix
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c24"
    >
      <span
        class="c25"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-disabled 1`] = `
.c6 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-left: 8px;
}

.c5 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c0:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  color: #bbb;
  box-shadow: none;
}

.c7,
.c7 input,
.c7 .style__SearchIcon-sc-11j0fsv-1 {
  cursor: not-allowed;
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c7:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c7 input {
  line-height: 26px;
  height: 26px;
}

.c7 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 input::-moz-placeholder {
  color: #abb4c3;
}

.c7 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 input::placeholder {
  color: #abb4c3;
}

.c7,
.c7:hover {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c7 .c4,
.c7 .c2 {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3"
        >
          search
        </span>
        <input
          value="default value"
        />
        <span
          class="c4 c5"
        >
          <i
            class="uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c7"
      disabled=""
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3"
        >
          search
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="c4 c5"
        >
          <i
            class="uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c7"
      disabled=""
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3"
        >
          <i
            class="uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="c4 c5"
        >
          search
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-icon 1`] = `
.c4 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c0:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c5 .c2,
.c5 .sc-11j0fsv-0-style__FixWrap-PStRz {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="uc-fe-icon icon__circle-fill c4"
            type="circle-fill"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="uc-fe-icon icon__circle c4"
            type="circle"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="uc-fe-icon icon__loading c4"
            type="loading"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-prefix 1`] = `
.c4 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-left: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c0:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c5 .c6,
.c5 .c2 {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3"
        >
          <i
            class="uc-fe-icon icon__search c4"
            type="search"
          />
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      style="width:300px;"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      style="width:300px;"
    >
      <span
        class="c1"
      >
        <span
          class="c2 c3"
        >
          <div
            style="width:50px;"
          >
            prefix
          </div>
        </span>
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-size 1`] = `
.c1 {
  display: table;
  width: 100%;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c2:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c2 input {
  line-height: 26px;
  height: 26px;
}

.c2 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 input::-moz-placeholder {
  color: #abb4c3;
}

.c2 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 input::placeholder {
  color: #abb4c3;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 22px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c0:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input {
  line-height: 20px;
  height: 20px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c3 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 32px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c3 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c3:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c3 input {
  line-height: 30px;
  height: 30px;
}

.c3 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c3 input::-moz-placeholder {
  color: #abb4c3;
}

.c3 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c3 input::placeholder {
  color: #abb4c3;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c2"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c3"
    >
      <span
        class="c1"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-suffix 1`] = `
.c4 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-right: 8px;
}

.c1 {
  display: table;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c0:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c5 .c2,
.c5 .sc-11j0fsv-0-style__FixWrap-PStRz {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          suffix
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="uc-fe-icon icon__search c4"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search 1`] = `
.c12 {
  vertical-align: baseline;
}

.c27 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-right: 8px;
}

.c29 {
  cursor: pointer;
}

.c25 {
  display: table;
  width: 100%;
}

.c24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c24 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c24:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c24 input {
  line-height: 26px;
  height: 26px;
}

.c24 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c24 input::-moz-placeholder {
  color: #abb4c3;
}

.c24 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c24 input::placeholder {
  color: #abb4c3;
}

.c30,
.c30 input,
.c30 .c28 {
  cursor: not-allowed;
}

.c30 .c26,
.c30 .sc-11j0fsv-0-style__FixWrap-PStRz {
  color: inherit;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c32 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c32:last-child {
  margin-right: 0;
}

.c7 .c33+.c33 {
  margin-left: -1px;
}

.c7 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c24"
    >
      <span
        class="c25"
      >
        <input />
        <span
          class="c26 c27"
        >
          <i
            class="c28 c29 uc-fe-icon icon__search c12"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-disabled 1`] = `
.c6 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-right: 8px;
}

.c5 {
  cursor: pointer;
}

.c1 {
  display: table;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c7:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c7 input {
  line-height: 26px;
  height: 26px;
}

.c7 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 input::-moz-placeholder {
  color: #abb4c3;
}

.c7 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 input::placeholder {
  color: #abb4c3;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  color: #bbb;
  box-shadow: none;
}

.c0,
.c0 input,
.c0 .c4 {
  cursor: not-allowed;
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c0:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input {
  line-height: 26px;
  height: 26px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c0,
.c0:hover {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c0 .c2,
.c0 .sc-11j0fsv-0-style__FixWrap-PStRz {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
      disabled=""
    >
      <span
        class="c1"
      >
        <input
          disabled=""
        />
        <span
          class="c2 c3"
        >
          <i
            class="c4 c5 uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c7"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="c4 c5 uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-size 1`] = `
.c6 {
  vertical-align: baseline;
}

.c3 {
  vertical-align: middle;
  display: table-cell;
  color: #636e83;
  width: 1px;
  padding-right: 8px;
}

.c5 {
  cursor: pointer;
}

.c1 {
  display: table;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c7:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c7 input {
  line-height: 26px;
  height: 26px;
}

.c7 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 input::-moz-placeholder {
  color: #abb4c3;
}

.c7 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 input::placeholder {
  color: #abb4c3;
}

.c9,
.c9 input,
.c9 .c4 {
  cursor: not-allowed;
}

.c9 .c2,
.c9 .sc-11j0fsv-0-style__FixWrap-PStRz {
  color: inherit;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 22px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c0 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c0:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c0 input {
  line-height: 20px;
  height: 20px;
}

.c0 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c0 input::-moz-placeholder {
  color: #abb4c3;
}

.c0 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c0 input::placeholder {
  color: #abb4c3;
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 32px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  border: none;
  outline: none;
  color: inherit;
  background: none;
}

.c8:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c8 input {
  line-height: 30px;
  height: 30px;
}

.c8 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 input::-moz-placeholder {
  color: #abb4c3;
}

.c8 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 input::placeholder {
  color: #abb4c3;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c0"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="c4 c5 uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c7"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="c4 c5 uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input c8"
    >
      <span
        class="c1"
      >
        <input />
        <span
          class="c2 c3"
        >
          <i
            class="c4 c5 uc-fe-icon icon__search c6"
            type="search"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;
